--- a/Random Users/Resources/Base.lproj/Main.storyboard
+++ b/Random Users/Resources/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="15705" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="15705" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="S1g-GW-94L">
     <device id="retina5_9" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
@@ -17,12 +17,34 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <prototypes>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="UserCell" id="dAe-Us-6Vt" customClass="UserTableViewCell" customModule="Random_Users" customModuleProvider="target">
-                                <rect key="frame" x="0.0" y="28" width="375" height="43.666667938232422"/>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="UserCell" rowHeight="55" id="dAe-Us-6Vt" customClass="UserTableViewCell" customModule="Random_Users" customModuleProvider="target">
+                                <rect key="frame" x="0.0" y="28" width="375" height="55"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="dAe-Us-6Vt" id="LVp-N1-36J">
-                                    <rect key="frame" x="0.0" y="0.0" width="375" height="43.666667938232422"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="375" height="55"/>
                                     <autoresizingMask key="autoresizingMask"/>
+                                    <subviews>
+                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="oal-44-dHp">
+                                            <rect key="frame" x="0.0" y="0.0" width="55" height="55"/>
+                                            <constraints>
+                                                <constraint firstAttribute="width" secondItem="oal-44-dHp" secondAttribute="height" multiplier="1:1" id="127-76-pJ4"/>
+                                            </constraints>
+                                        </imageView>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="V9w-7n-fyS">
+                                            <rect key="frame" x="67" y="17" width="280" height="21"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                            <nil key="textColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                    </subviews>
+                                    <constraints>
+                                        <constraint firstAttribute="bottom" secondItem="oal-44-dHp" secondAttribute="bottom" id="1DH-bX-Eyo"/>
+                                        <constraint firstAttribute="trailingMargin" secondItem="V9w-7n-fyS" secondAttribute="trailing" constant="12" id="GJY-C0-Tc9"/>
+                                        <constraint firstItem="oal-44-dHp" firstAttribute="top" secondItem="LVp-N1-36J" secondAttribute="top" id="aeJ-2N-RLo"/>
+                                        <constraint firstItem="V9w-7n-fyS" firstAttribute="leading" secondItem="oal-44-dHp" secondAttribute="trailing" constant="12" id="bj0-ds-TS3"/>
+                                        <constraint firstItem="V9w-7n-fyS" firstAttribute="centerY" secondItem="LVp-N1-36J" secondAttribute="centerY" id="pzf-Ts-eQ5"/>
+                                        <constraint firstItem="oal-44-dHp" firstAttribute="leading" secondItem="LVp-N1-36J" secondAttribute="leading" id="yb0-ME-Y2N"/>
+                                    </constraints>
                                 </tableViewCellContentView>
                                 <connections>
                                     <segue destination="Bj8-CR-7sL" kind="show" id="uGH-ez-hFu"/>
@@ -38,7 +60,7 @@
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="WKC-ut-fxd" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="704" y="-70"/>
+            <point key="canvasLocation" x="703.20000000000005" y="-70.197044334975374"/>
         </scene>
         <!--User Detail View Controller-->
         <scene sceneID="G27-De-Jfh">
@@ -47,7 +69,46 @@
                     <view key="view" contentMode="scaleToFill" id="Mwy-Lg-Qec">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="2FM-Za-SYP">
+                                <rect key="frame" x="37.666666666666657" y="256" width="300" height="300"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" secondItem="2FM-Za-SYP" secondAttribute="height" multiplier="1:1" id="JyE-Xc-hjM"/>
+                                    <constraint firstAttribute="width" constant="300" id="xw6-Ag-pik"/>
+                                </constraints>
+                            </imageView>
+                            <stackView opaque="NO" contentMode="scaleToFill" misplaced="YES" axis="vertical" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="YLJ-qx-B6p">
+                                <rect key="frame" x="89" y="528" width="93" height="77"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="S6L-fc-OaJ">
+                                        <rect key="frame" x="0.0" y="0.0" width="93" height="20.333333333333332"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="pCz-hB-XyN">
+                                        <rect key="frame" x="0.0" y="28.333333333333371" width="93" height="20.333333333333329"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="QQW-fE-AdQ">
+                                        <rect key="frame" x="0.0" y="56.666666666666636" width="93" height="20.333333333333336"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
+                            </stackView>
+                        </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <constraints>
+                            <constraint firstItem="YLJ-qx-B6p" firstAttribute="top" secondItem="2FM-Za-SYP" secondAttribute="bottom" constant="48" id="7QV-ud-9sp"/>
+                            <constraint firstItem="2FM-Za-SYP" firstAttribute="centerY" secondItem="Mwy-Lg-Qec" secondAttribute="centerY" id="8qJ-bo-5ZB"/>
+                            <constraint firstItem="2FM-Za-SYP" firstAttribute="centerX" secondItem="Mwy-Lg-Qec" secondAttribute="centerX" id="dyf-fM-Ima"/>
+                            <constraint firstItem="YLJ-qx-B6p" firstAttribute="leading" secondItem="2FM-Za-SYP" secondAttribute="leading" id="tsk-xR-GR8"/>
+                            <constraint firstItem="XFA-xJ-Szd" firstAttribute="trailing" secondItem="YLJ-qx-B6p" secondAttribute="trailing" constant="244.33333333333331" id="xlK-Sn-4kJ"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="XFA-xJ-Szd"/>
                     </view>
                     <navigationItem key="navigationItem" id="EvX-3W-lx6"/>
