--- a/Random Users/Resources/Base.lproj/Main.storyboard
+++ b/Random Users/Resources/Base.lproj/Main.storyboard
@@ -24,20 +24,32 @@
                                     <rect key="frame" x="0.0" y="0.0" width="375" height="69"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
-                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="QeO-ys-AzJ">
-                                            <rect key="frame" x="16" y="8" width="50" height="50"/>
-                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="QeO-ys-AzJ">
+                                            <rect key="frame" x="10" y="8" width="50" height="53"/>
+                                            <constraints>
+                                                <constraint firstAttribute="height" constant="50" id="CLz-zD-it9"/>
+                                                <constraint firstAttribute="width" constant="50" id="oVu-uM-bYC"/>
+                                            </constraints>
                                         </imageView>
-                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Name Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="whr-M1-xJl">
-                                            <rect key="frame" x="101" y="24" width="237" height="21"/>
-                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Name Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="whr-M1-xJl">
+                                            <rect key="frame" x="110" y="24" width="199" height="21"/>
                                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                             <nil key="textColor"/>
                                             <nil key="highlightedColor"/>
                                         </label>
                                     </subviews>
+                                    <constraints>
+                                        <constraint firstItem="whr-M1-xJl" firstAttribute="leading" secondItem="QeO-ys-AzJ" secondAttribute="trailing" constant="50" id="1WS-QN-3c3"/>
+                                        <constraint firstItem="QeO-ys-AzJ" firstAttribute="leading" secondItem="dYT-Lo-xgb" secondAttribute="leading" constant="10" id="IRo-BB-oSG"/>
+                                        <constraint firstAttribute="bottom" secondItem="QeO-ys-AzJ" secondAttribute="bottom" constant="8" id="c04-TB-v2K"/>
+                                        <constraint firstAttribute="trailingMargin" secondItem="whr-M1-xJl" secondAttribute="trailing" constant="50" id="r8k-iE-9WQ"/>
+                                        <constraint firstItem="QeO-ys-AzJ" firstAttribute="top" secondItem="dYT-Lo-xgb" secondAttribute="top" constant="8" id="vCa-jG-Und"/>
+                                        <constraint firstItem="whr-M1-xJl" firstAttribute="centerY" secondItem="QeO-ys-AzJ" secondAttribute="centerY" id="yT0-08-iub"/>
+                                    </constraints>
                                 </tableViewCellContentView>
                                 <connections>
+                                    <outlet property="nameLabel" destination="whr-M1-xJl" id="3W3-ep-GSA"/>
+                                    <outlet property="thumbnailImage" destination="QeO-ys-AzJ" id="ofd-N7-rSY"/>
                                     <segue destination="6x9-Kl-aMH" kind="show" identifier="DetailViewSegue" id="0S1-dl-9vd"/>
                                 </connections>
                             </tableViewCell>
